alterações cruciais na API do Projeto Event+ com react.js
